Stop routes duplicating, fix z-index of routes

--- a/incremental/CavernousII/style.css
+++ b/incremental/CavernousII/style.css
@@ -448,7 +448,7 @@ h4#location-name {
 	width: 300px;
 	background: #99bbbb;
 	border: 1px solid #00000033;
-	z-index: 5;
+	z-index: 50;
 	padding: 2px;
 	color: #000000;
 	cursor: default;
